test/type-check/should-pass/ret.bril
#To test if ret works.
main {
  v: int = const 4;
  print v;
  ret;
  print v;
}
