test/type-check/should-fail/not1.bril
	#test integer cannot be assigned to bool
main{
	
    v1: int = const 1;
    v2: bool = not v1;
    print v2;
}
